@@ -1,5 +1,13 @@
 2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
+	* src/SDCCast.c,
+	  support/regression/tests/gcc-torture-execute-920625-1.c,
+	  support/regression/tests/gcc-torture-execute-strct-stdarg-1.c,
+	  support/regression/tests/gcc-torture-execute-strct-varg-1.c:
+	  Basic support for struct varargs.
+
+2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
+
 	* src/mcs51/gen.c:
 	  Fix bug #3364.
 	* support/regression/tests/bitintvararg.c:
